tests/paczka1/fuzzy1/10084117.err
Error in line 1: Zt1 A884 8,6
Error in line 11: 6pBlYsDuAMr A759 94,1
